<resources>
    <string name="app_name"> RayTraining </string>

    <string name="app_fortune_activity"> Fortune teller </string>
    <string name="btn_fortune_check"> What\'s my fortune </string>

    <string name="app_intent_take_picture_activity"> Intent take picture </string>
    <string name="btn_add_picture_text"> Add text </string>

    <string name="app_intent_add_text_to_picture_activity"> Intent add picture text </string>
    <string name="btn_complete_picture_text"> Done </string>

    <string name="app_todo_activity"> Todo </string>
    <string name="btn_add_todo"> Add task </string>
    <string name="btn_add_new_todo"> Add new task </string>

    <string name="app_rage_list_fragment"> Rage list fragment </string>
    <string name="app_rage_details_fragment"> Rage details fragment </string>

    <string name="app_grid_view"> Grid view </string>

    <string name="change_layout_manager"> Change layout </string>
    <string name="api_key">3eT32yJFZ1Tx1S8XYbZ6oKBdyZFzF8CgnzRZXNjL</string>

    <string name="btn_animate_launch_rocket"> Launch </string>
    <string name="btn_animate_spin_rocket"> Spin </string>
    <string name="btn_animate_accelerate_rocket"> Accelerate </string>
    <string name="btn_animate_launch_rocket_2"> Launch (ObjectAnimator) </string>
    <string name="btn_animate_background"> Background </string>
    <string name="btn_animate_launch_and_spin"> Launch and spin (AnimationSet) </string>
    <string name="btn_animate_launch_and_spin2"> Launch and spin (ViewPropertyAnimation)  </string>
    <string name="btn_animate_get_doge"> Get Doge </string>
    <string name="btn_animate_events"> Events </string>
    <string name="btn_animate_fly_and_back"> Fly and back (AnimationOptions) </string>
    <string name="btn_animate_with_xml"> Jump and blink </string>

</resources>
